gitops/components/apps/demo-api/base/deploymentconfig.yaml
  apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  namespace: ssuganth-dev
  metadata:
    name: demoapi-dc
    namespace: ssuganth-dev
    labels:
      app.kubernetes.io/part-of: demoapi-app
  spec:
    completionDeadlineSeconds: 1200
    replicas: 2
    selector:
      name: demoapi-dc
    strategy:
      type: Rolling
      maxSurge: 50%
      maxUnavailable: 0
    template:
      metadata:
        labels:
          dev-app: demoapi-app
          name: demoapi-dc
      spec:
        containers:
          - image: >-
              image-registry.openshift-image-registry.svc:5000/ssuganth-dev/sampledemo-api:dev
            name: demoapi-dc
            ports:
              - containerPort: 8080
            resources:
              limits:
                cpu: 10m
                memory: 64Mi
              requests:
                cpu: 10m
                memory: 64Mi
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames:
            - demoapi-dc
          from:
            kind: ImageStreamTag
            namespace: "ssuganth-dev"
            name: 'sampledemo-api:dev'
  status: {}
